<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="28dp"
    tools:context=".MainMenuActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tv_register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/global_nombre_usuario"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:maxWidth="450dp"
        android:minWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_contenedor_borde">

        <TextView
            android:id="@+id/tv_main_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_tv_bienvenida"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="60dp" />

        <Button
            android:id="@+id/btn_main_register"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:text="@string/global_registrar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_payment"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:text="@string/global_cobro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_manage"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="32dp"
            android:text="@string/global_gestionar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_main_logout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/main_btn_logout"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>